--- a/public/miete.css
+++ b/public/miete.css
@@ -2,7 +2,46 @@ amp-img {
     background-color: grey;
   }
 
+.section-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.section-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+
+.section-item-image {
+    overflow: hidden;
+}
+
+.section-amp-image:hover {
+    transition: all .2s ease-in-out;
+    transform: scale(1.2);
+}
+
 .mms-container {
     max-width: 1188px;
     margin: 0 auto; 
+}
+
+.section-item-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #df0000;
+    width: 100%;
+    height: 40px;
+    margin: 0; 
+    margin-top: -4px;
+}
+
+.section-item-text > h2 {
+    color: white;
 }
