--- a/public/miete.css
+++ b/public/miete.css
@@ -28,7 +28,7 @@ amp-img {
 
 .mms-container {
     max-width: 1188px;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
 .section-item-text {
@@ -38,7 +38,7 @@ amp-img {
     background-color: #df0000;
     width: 100%;
     height: 40px;
-    margin: 0; 
+    margin: 0;
     margin-top: -4px;
 }
 
@@ -75,11 +75,11 @@ amp-accordion section p{
     background-color: #f2f2f2;
     padding: 20px;
     margin: 0;
+    color: #444;
 }
 
 .section-steps{
     background-color: #df0000;
-
 }
 .section-steps h1{
     color: #fff;
@@ -87,4 +87,17 @@ amp-accordion section p{
     text-align: center;
     border-bottom: 5px solid #fff;
     font-size: 7vw !important;
+}
+
+.section-container a, a:link {
+    color: #fff;
+    text-decoration: none;
+}
+
+amp-accordian section p a:link span{
+    color: #444 !important;
+}
+
+amp-accordian section p a span{
+    color: #444 !important;
 }
